diploma are last, who cares?

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="#portfolio">portfolio?</a></li>
             <li><a  href="#CVinter">CV interactif</a></li>
             <li><a id=jcprt href="#printable">CV en version imprimable</a></li>
-            <li><a href=resume.html >Version anglaise</li>
+            <li><a href=resume.html >Version anglaise</a></li>
         </ul>
     </div>
     
@@ -260,54 +260,6 @@
        </tr>
    </table>
    </div>
-   <div class="content step" data-scale=10 data-x="-2000" data-y="2000" 
-  data-rotate=180 >
-       <h1 class=big >Diplômes</h1>
-    </div>
-   <div class="content step" data-scale=1 
-   data-rotate=180 data-x="-2000" data-y="1500">
-
-   <h1 class=intitule >
-    1998 Maître es science mention assez bien
-   </h1>
-   Université Pierre et Marie Curie (Paris VI)<br/>
-   Option micro-électronique (CAO des microprocesseurs et programmation 
-   des interfaces)
-   <table>
-        <tr >
-          <td class=field >
-            Outil
-          </td>
-          <td class=is >
-            VHDL, PSpice, matlab
-          </td>
-       </tr>
-   </table>
-
-
-   </div>
-   <div class="content step" data-scale=1 
-   data-rotate=180 data-x="-2000" data-y="1000">
-
-   <h1 class=intitule >
-    2002 Cycle B CNAM ingénieurie des organisation
-   </h1>
-      Conservatoire National des Arts et Métiers (Paris)<br/>
-      Chaire DSO<br/>
-   <table>
-        <tr >
-          <td class=field >
-            Fonctionnel
-          </td>
-          <td class=is >
-            Assurance Qualité, Conduite Opérationnelle du changement,
-            Analyse des organisations
-          </td>
-       </tr>
-   </table>
-
-
-   </div>
    <div class="content step" data-scale=10 data-x="-2000" data-y="000" 
   data-rotate=-90 >
        <h1 class=big >Portfolio</h1>
@@ -359,6 +311,54 @@
 
       <img src=img/stat.png width=900px />
     </div>
+   <div class="content step" data-scale=10 data-x="-2000" data-y="2000" 
+  data-rotate=180 >
+       <h1 class=big >Diplômes</h1>
+    </div>
+   <div class="content step" data-scale=1 
+   data-rotate=180 data-x="-2000" data-y="1500">
+
+   <h1 class=intitule >
+    1998 Maître es science mention assez bien
+   </h1>
+   Université Pierre et Marie Curie (Paris VI)<br/>
+   Option micro-électronique (CAO des microprocesseurs et programmation 
+   des interfaces)
+   <table>
+        <tr >
+          <td class=field >
+            Outil
+          </td>
+          <td class=is >
+            VHDL, PSpice, matlab
+          </td>
+       </tr>
+   </table>
+
+
+   </div>
+   <div class="content step" data-scale=1 
+   data-rotate=180 data-x="-2000" data-y="1000">
+
+   <h1 class=intitule >
+    2002 Cycle B CNAM ingénieurie des organisation
+   </h1>
+      Conservatoire National des Arts et Métiers (Paris)<br/>
+      Chaire DSO<br/>
+   <table>
+        <tr >
+          <td class=field >
+            Fonctionnel
+          </td>
+          <td class=is >
+            Assurance Qualité, Conduite Opérationnelle du changement,
+            Analyse des organisations
+          </td>
+       </tr>
+   </table>
+
+
+   </div>
 
 </div>
 <div id=printable >
