--- a/resume.html
+++ b/resume.html
@@ -245,52 +245,6 @@
        </tr>
    </table>
    </div>
-   <div class="content step" data-scale=10 data-x="-2000" data-y="2000" 
-  data-rotate=180 >
-       <h1 class=big >Diplomas</h1>
-    </div>
-   <div class="content step" data-scale=1 
-   data-rotate=180 data-x="-2000" data-y="1500">
-
-   <h1 class=intitule >
-    1998 Master in applied science mention assez bien
-   </h1>
-   Université Pierre et Marie Curie (Paris VI)<br/>
-   Option: micro-electronique (VLSI design &amp; interface programmation)
-   <table>
-        <tr >
-          <td class=field >
-            Tools
-          </td>
-          <td class=is >
-            VHDL, PSpice, matlab
-          </td>
-       </tr>
-   </table>
-
-
-   </div>
-   <div class="content step" data-scale=1 
-   data-rotate=180 data-x="-2000" data-y="1000">
-
-   <h1 class=intitule >
-    2002 Cycle B CNAM ingénieurie des organisation
-   </h1>
-      Conservatoire National des Arts et Métiers (Paris)<br/>
-      Chaire DSO<br/>
-   <table>
-        <tr >
-          <td class=field >
-          Functional
-          </td>
-          <td class=is >
-          Quality Assurance, Change Management, Organisation Analysis
-          </td>
-       </tr>
-   </table>
-
-
-   </div>
    <div class="content step" data-scale=10 data-x="-2000" data-y="000" 
   data-rotate=-90 >
        <h1 class=big >Portfolio</h1>
@@ -341,6 +295,52 @@
       uses <a href=https://github.com/jul/yahi>archery</a> and flask<br/>
 
     </div>
+   <div class="content step" data-scale=10 data-x="-2000" data-y="2000" 
+  data-rotate=180 >
+       <h1 class=big >Diplomas</h1>
+    </div>
+   <div class="content step" data-scale=1 
+   data-rotate=180 data-x="-2000" data-y="1500">
+
+   <h1 class=intitule >
+    1998 Master in applied science mention assez bien
+   </h1>
+   Université Pierre et Marie Curie (Paris VI)<br/>
+   Option: micro-electronic (VLSI design &amp; interface programmation)
+   <table>
+        <tr >
+          <td class=field >
+            Tools
+          </td>
+          <td class=is >
+            VHDL, PSpice, matlab
+          </td>
+       </tr>
+   </table>
+
+
+   </div>
+   <div class="content step" data-scale=1 
+   data-rotate=180 data-x="-2000" data-y="1000">
+
+   <h1 class=intitule >
+    2002 Cycle B CNAM ingénieurie des organisation
+   </h1>
+      Conservatoire National des Arts et Métiers (Paris)<br/>
+      Chaire DSO<br/>
+   <table>
+        <tr >
+          <td class=field >
+          Functional
+          </td>
+          <td class=is >
+          Quality Assurance, Change Management, Organisation Analysis
+          </td>
+       </tr>
+   </table>
+
+
+   </div>
 
 </div>
 <div id=printable >
