j'aimais pas le passage freelance

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 
    <h1 class=intitule>2005 - 2010 Freelance</h1>
    <p>
-   5 années pour satisfaire ma curiosité pour tous les
-   métiers clients et technologies existantes.<br/>
+   5 années de missions courtes à fortes valeurs ajoutées, et intenses. 
+   <br/>
    Les TelCo et ainsi que les web agency ont été mes grandes expériences.
    J'ai surtout travailler en technologie Web.
    </p>
