let's hope I did not broke my history, god I prefer hg

--- a/index.html
+++ b/index.html
@@ -48,6 +48,58 @@
        <h1 class=big >Expériences</h1>
     </div>
 
+       <div  class="content step"   data-scale=1.1 data-x="-000" data-y="3000"  >
+       <h1 class=intitule><b>2013</b> Ubisoft (Montréal)</h1>
+       <p>
+       En tant que développeur senior, j'ai participé à l'élaboration 
+       d'outils pour le déploiement des mécaniques de jeux en lignes. 
+       Produits basés sur des technologies python :
+       </p>
+       <ul>
+           <li>technologie web: flask, pyramid, turbogears, django;  </li>
+           <li>LDAP et role base accounting;</li>
+           <li>utilisation des méthodes agiles; </li>
+           <li>zero mq pour utilisation dans un système distribué; </li>
+           <li>packaging d'applications centOS, et python (distutils);</li>
+           <li>documentation d'architecture conformément à ISO2700X (risk assessment, Access Control...) </li>
+       </ul>
+
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+                Python 2, web, REST, html5
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+                Méthodologie
+              </td>
+              <td class=is >
+                Scruming, dévelopement agile
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+                Fonctionnel
+              </td>
+              <td class=is >
+                Développement, documentation, R&amp;D
+              </td>
+           <tr >
+              <td class=field >
+                Outil et logiciels
+              </td>
+              <td class=is >
+                nginx, apache, postgresql, django, flask, LDAP, Active Directory,  
+                mysql, jquery, pyzmq
+              </td>
+           </tr>
+       </table>
+   </div>
+
        <div  class="content step"   data-scale=1 data-x="000" data-y="2000"  >
        <h1 class=intitule><b>2011</b> MassMotionMedia Publicité en ligne en format Riche</h1>
        <p>
