--- a/index.html
+++ b/index.html
@@ -47,9 +47,46 @@
    <div class="content step " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
     </div>
+       <div  class="content step"   data-scale=1.2 data-x="-000" data-y="4000"  >
+       <h1 class=intitule><b>-2013/...</b> Ubity (Montréal)</h1>
+       <p>
+        Analyse et développement orienté web pour les parties frontales et métiers d'une solution client de voix sur IP.
+       </p>
+       <ul>
+           <li>technologie web: uwsgi, pylons;  </li>
+           <li>zero mq pour utilisation dans un système distribué; </li>
+           <li>packaging d'applications debian, et python (distutils);</li>
+       </ul>
 
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+                Python 2, web, REST, html5
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+                Fonctionnel
+              </td>
+              <td class=is >
+                VoIP, Développement, documentation, R&amp;D
+              </td>
+           <tr >
+              <td class=field >
+                Outil et logiciels
+              </td>
+              <td class=is >
+                nginx, mysql, javascript,
+                mysql, jquery, pyzmq, virtualenv, stdeb
+              </td>
+           </tr>
+       </table>
+   </div>
        <div  class="content step"   data-scale=1.1 data-x="-000" data-y="3000"  >
-       <h1 class=intitule><b>2013</b> Ubisoft (Montréal)</h1>
+       <h1 class=intitule><b>2013 /</b> Ubisoft (Montréal)</h1>
        <p>
        En tant que développeur senior, j'ai participé à l'élaboration 
        d'outils pour le déploiement des mécaniques de jeux en lignes. 
