updating french experience

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        <h1 class=big >Expériences</h1>
     </div>
        <div  class="content step"   data-scale=1.2 data-x="-000" data-y="4000"  >
-       <h1 class=intitule><b>-2013/...</b> Ubity (Montréal)</h1>
+       <h1 class=intitule><b>2013/2015</b> Ubity (Montréal)</h1>
        <p>
         Analyse et développement orienté web pour les parties frontales et métiers d'une solution client de voix sur IP.
        </p>
@@ -72,7 +72,7 @@
                 Fonctionnel
               </td>
               <td class=is >
-                VoIP, Développement, documentation, R&amp;D
+                VoIP, Développement, documentation, R&amp;D, SIP
               </td>
            <tr >
               <td class=field >
