--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
    <div id="CVinter" class="content step " 
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
        <h1 class=big >Objectif</h1>
-	  Je ne souhaite pas vivre pour travailler, mais travailler pour vivre.<br/>
-	J'aime coder, et j'y reviendrais peut être le jour où je pourrais enfin investir du temps dans ma vie personnelle.
-<br/>
-	Je suis déjà comblé de ce que je souhaite le plus au monde et la seule chose que je désire en ayant un travail, c'est de me permettre d'en profiter.
+	Travailler dans un environnement professionel équilibré.
    </div>
    <div class="content step " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
