--- a/resume.html
+++ b/resume.html
@@ -330,8 +330,8 @@ version  interactive
 <div >Julien Tayon<br/>
 <a href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
 <a href=http://github.com/jul >github.com/jul</a><br/>
-Tel: 514 999 7453<br/>
-Montréal, CA
+Tel: +33 7 6886 1982<br/>
+Paris, FR
 </div>
 </div>
 
