--- a/resume.html
+++ b/resume.html
@@ -45,6 +45,128 @@
    <div class="content step " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Experiences</h1>
     </div>
+	<div  class="content step"   data-scale=1.5 data-x="-000" data-y="5000"  >
+       <h1 class=intitule><b>2016</b>Driver Riper (Montpellier)</h1>
+       <p>
+	Bin packing and manipulations of heavy objects in order to move people.
+       </p>
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+               	Brain &amp; Muscles (fingers and legs)
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+	        Functional
+              </td>
+              <td class=is >
+					  Communication, et <i>don't break</i>
+              </td>
+           <tr >
+              <td class=field >
+                Tools
+              </td>
+              <td class=is >
+					  Scotch, toolbox, screws, case, cardboxes, paper...
+              </td>
+           </tr>
+       </table>
+   </div>
+       <div  class="content step"   data-scale=1.2 data-x="-000" data-y="4000"  >
+       <h1 class=intitule><b>2013/2015</b> Ubity (Montréal)</h1>
+       <p>
+	   		Generalist developer for a TelCo specialized in Voice over IP 
+       </p>
+	   Main focus
+       <ul>
+           <li>web technologies: uwsgi, pylons;  </li>
+           <li>zero mq (pyzmq) to support a distributed measurement system ; </li>
+           <li>packaging of python applications for deploying virtualenv (distutils);</li>
+		  
+       </ul>
+	  
+
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+                Python 2, web, REST, html5, asterisk
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+                Functional
+              </td>
+              <td class=is >
+                VoIP, Coding, documentation, R&amp;D, SIP
+              </td>
+           <tr >
+              <td class=field >
+                Tools &amp; softwares
+              </td>
+              <td class=is >
+                nginx, mysql, javascript,
+                mysql, jquery, pyzmq, virtualenv, stdeb
+              </td>
+           </tr>
+       </table>
+   </div>
+       <div  class="content step"   data-scale=1.1 data-x="-000" data-y="3000"  >
+       <h1 class=intitule><b>2013 /</b> Ubisoft (Montréal)</h1>
+       <p>
+       		As a senior dev I was part of the tools team deploying the
+		online part of the games orchestrated with django.
+       </p>
+       <ul>
+           <li>web: flask, pyramid, turbogears, django;  </li>
+           <li>LDAP : role base accounting;</li>
+           <li>SCRUM, agile; </li>
+           <li>zero message queueing used in a distributed environment; </li>
+           <li>packaging, centOS, debian application and python (distutils);</li>
+           <li>Documentaton in the respect of ISO2700X (risk assessment, Access Control...) </li>
+       </ul>
+        <table>
+           <tr >
+              <td class=field >
+                Technologies
+              </td>
+              <td class=is >
+                Python 2, web, REST, html5
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+		      Methodologies
+              </td>
+              <td class=is >
+                Scruming, agile
+              </td>
+           </tr>
+           <tr >
+              <td class=field >
+		      	Functional
+              </td>
+              <td class=is >
+                Development, documentation, R&amp;D
+              </td>
+           <tr >
+              <td class=field >
+                Software and tools
+              </td>
+              <td class=is >
+                nginx, apache, postgresql, django, flask, LDAP, Active Directory,  
+                mysql, jquery, pyzmq
+              </td>
+           </tr>
+       </table>
+   </div>
+
 
        <div  class="content step"   data-scale=1 data-x="000" data-y="2000"  >
        <h1 class=intitule><b>2011</b> MassMotionMedia Rich Format Media Advertising</h1>
