fixing an annoying printing bug

--- a/index.html
+++ b/index.html
@@ -483,9 +483,9 @@
 <center><a href="#/init" class=button >
 version  interactive
 </a></center><br/>
-<div >Julien Tayon<br/>
-<a href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
-<a href=http://github.com/jul >github.com/jul</a><br/>
+<div class=coord >Julien Tayon<br/>
+<a class=coord href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
+<a class=coord href=http://github.com/jul >github.com/jul</a><br/>
 Tel: +33 (0) 7 6886 1982
 </div>
 </div>
