--- a/resume.html
+++ b/resume.html
@@ -449,7 +449,7 @@
 <center><a href="#/init" class=button >
 version  interactive
 </a></center><br/>
-<div >Julien Tayon<br/>
+<div class=coord >Julien Tayon<br/>
 <a href=mailto:julien@tayon.net >Julien@tayon.net</a><br/>
 <a href=http://github.com/jul >github.com/jul</a><br/>
 Tel: +33 7 6886 1982<br/>
