adding the room information just in case and the fact, it is fosdem

--- a/pres.html
+++ b/pres.html
@@ -26,8 +26,20 @@
       <p>For the best experience please use the latest <b>Chrome</b>, <b>Safari</b> or <b>Firefox</b> browser.</p>
     </div>
     <div id="impress">
-      <div id="init" style="line-height:2em;" class="step" data-scale=6 data-x="00" data-y="00" >
+      <div id="init" style="line-height:1.4em;" class="step" data-scale=6 data-x="00" data-y="00" >
+          <center>    <a href=https://fosdem.org/2017/schedule/event/python_duck_typing/><b>FOSDEM'</b>17</a><br/>
+
         The power of duck typing and linear algrebra
+        <br/></center>
+        <pre class=vi>
+
+    Track: Python devroom
+    Room: H.1308 (Rolin)
+    Day: Saturday
+    Start: 11:30
+    End: 12:00
+        </pre>
+
         <ul>
           <li><a  href="#CVinter">I wanna puke visualisation</a></li>
           <li><a id=jcprt href="#printable">Printable one</a></li>
@@ -528,7 +540,7 @@ I cannot say how much I consider the 2D class Point as misleading as <i>Hello wo
         <li>It works for me(c)</li>
         <li>the naming is awfull and what was indentend as puns is a pain</li>
         <li>for dimension greater than 3 results are consistent</li>
-        <li>I did it because I could, without thinking. Critic welcomed.</li>
+        <li>I did it alone at home because I could, without thinking.</li>
     </ul>
     <a href=http://pythonhosted.org/VectorDict/vector.html#exemples>VectorDict</a> is used O_o (I still have to push a pull request in pypi). I DO NOT recommend it, except for seeing the features I was initially encompassing.
     <br/>
