--- a/pres.html
+++ b/pres.html
@@ -627,6 +627,7 @@ data["user_agent"] += log_line * mdict( user_agent = 1)
         <li>Not a great communicator</li>
         <li>Too dyslexic to write a PEP</li>
         <li>I don't really like to evangelize</li>
+        <li>No published paper and no fame make it hard to have a credibility I guess</li>
     </ul>
     </div>
 <div
@@ -636,13 +637,13 @@ data["user_agent"] += log_line * mdict( user_agent = 1)
     <h1 class=big >Thanks to:</h1>      
         <ul>
         <li>
-        Stéphane Wirtel
+        Stéphane Wirtel, and FOSDEM team
         </li>
         <li>
-        FOSDEM
+        Pierre Parisot (who taught me everything @IBM ECAM) on text indexation,
         </li>
         <li>
-        All the great coders that make FOSS fun!
+        <span class=crazy>YOU!</span>All the great coders that make FOSS fun!
         </li>
         <li>
         <a href=http://twitter.com/bartaz />@bartaz</a> the author of impressjs used for this pres
