--- a/pres.html
+++ b/pres.html
@@ -516,7 +516,7 @@ that already works for the 2D &amp; 3D euclidean space without even trying.<br/>
     data-rotate=360 data-x="2500" data-y="3000">
 
 <center>
-    <iframe style="display:block;margin:0 auto;" width=1280 height=800  src=FOSDEM.html></iframe>
+    <iframe style="display:block;margin:0 auto;" width=1280 height="7000"  src=FOSDEM.html></iframe>
 <center>
 
 
