--- a/FOSDEM.html
+++ b/FOSDEM.html
@@ -12576,7 +12576,7 @@ $$T(A,B) = \frac{A \cdot B}{\|A\|^2 +\|B\|^2 - A \cdot B}$$
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Is-there-a-trick-to-algebreize-non-algebric-types?-">Is there a trick to algebreize non algebric types? <a class="anchor-link" href="#Is-there-a-trick-to-algebreize-non-algebric-types?-">&#182;</a></h2><p>In this case <em>cos</em> will not work we use:</p>
+<h2 id="Is-there-a-trick-to-algebreize-non-algebric-types?-">Is there a trick to algebra-ize non algebric types? <a class="anchor-link" href="#Is-there-a-trick-to-algebreize-non-algebric-types?-">&#182;</a></h2><p>In this case <em>cos</em> will not work we use:</p>
 $$\forall (u,v) \in E\times E,\ d(u,v) = \|u-v\|.$$<p>(math don't follow PEP8)</p>
 <p>For the distance</p>
 <p>You can thus define - \o/</p>
