--- a/pres.html
+++ b/pres.html
@@ -284,6 +284,7 @@ test #12
        >
 
           <h1 class=big><b>Math books then gives you the Cook book</b></h1>
+            <small>(did I pronounced meth books?)</small><br/>
           <img src=img/somprod_vect.png />
 
 
@@ -311,11 +312,11 @@ test #12
 <li>I made junction of relationships such as defining <span class=Identifier>__neg__</span> (unary -) as <pre class=vi>__neg__ = lambda self: self*=-1</pre> to ensure consistency
 </li>
 </ul>
-Abstract base class (<i>type</i>) and duck typing (using the <i>operator</i>) are the only 2 tricks used.
+<span style="text-decoration: line-through;">Abstract base class</span>* (<i>type</i>) duck typing and <i>operator</i> overloading are the only 2/3 tricks used.
 <br/>
    </p>
 <p class=exergue><b>
-The exact same trick can probably be implemented with C++ STL, in ruby, Perl, PHP, javascript...
+The exact same trick can probably be implemented in C++, in ruby, Perl, PHP, javascript...
 </b></p>
 
 
@@ -516,7 +517,7 @@ that already works for the 2D &amp; 3D euclidean space without even trying.<br/>
     data-rotate=360 data-x="2500" data-y="3000">
 
 <center>
-    <iframe style="display:block;margin:0 auto;" width=1280 height="7000"  src=FOSDEM.html></iframe>
+    <iframe style="display:block;margin:0 auto;" width=1280 height="7300"  src=FOSDEM.html></iframe>
 <center>
 
 
@@ -611,7 +612,7 @@ data["user_agent"] += log_line * mdict( user_agent = 1)
 <div
     class="step content " 
     data-rotate=270 data-x="3500" data-y="1000">
-    <h1 class=big>Other mad scientist project with Mappings?</h1>
+    <h1 class=big>Other mad scientist project with MutableMappings?</h1>
 
     <ul>
         <li><a href=http://pythonhosted.org/VectorDict/matrix.html>generic sparse matrices for transforming dict in dict</a></li>
