okay I understand nothing to algebraic data type in computer science

--- a/pres.html
+++ b/pres.html
@@ -42,6 +42,8 @@
     Start: 11:30
     End: 12:00
         </pre>
+<small>(me too, I love to have the slides during presentation so here is the url
+<a href=http://jul.github.io/cv/pres.html>http://jul.github.io/cv/pres.html</a>)</small><br>
 
         <ul>
           <li><a  href="#CVinter">I wanna puke visualisation</a></li>
@@ -247,10 +249,9 @@ test #12
        <p class=exergue>Yes, math rox, you are free to code whatever you want and you don't
            have to justify youself, as long as you pass the tests</p>
            <br>
-           <p><i>Note for coconut user that want algebraic data types: python
-               &amp; numpy already  provide some naturally algebraic data type</i>
-           <br>
-           <p><i>Note to R users: if you search for optimized list à la R in python go directly for numpy arrays</i></p>
+           <p><i>Note: it has nothing to do with coconut/rust algebraic data type
+as explained on wikipedia. I would say, if I would understand it. </i>
+</p>
 
 	</div>
 	<div  class="content step"   data-scale=1 data-x="-2000" data-y="2000"
