Sticking to the point

--- a/pres.html
+++ b/pres.html
@@ -439,11 +439,12 @@ vabs = lambda v: dot(v,v)**.5
 distance = lambda u, v: vabs(u-v)
 </pre>
 
-<small>I disagree with Lipschutz I think Ln norms should be taken for dimension n
+<small>It would be more aesthetic for vector of dimension p to write.
 
 $$ \left\| x \right\| _p = \bigg( \sum_{ i \in \mathbb N} \left| x_i \right| ^p \bigg) ^{1/p}$$
 <br>
-Where p = the dimension of your base.
+However L2 norm, is making coding way easier, so I totally agree.
+
 </small>
 
 
@@ -576,7 +577,7 @@ I cannot say how much I consider the 2D class Point as misleading as <i>Hello wo
     <h1 class=big>Parellism you said?</h1>
     <small>(Another geometrical joke)</small>
     <p>
-        Our data job often? take a dict (like after we parse a log line, or cvs) and 
+        Our boring data job? Take a dict (like after we parse a log line, or cvs) and 
         aggregating the data in a dict.
     </p>
     <pre class=vi>
@@ -632,12 +633,8 @@ data["user_agent"] += log_line * mdict( user_agent = 1)
     <h1 class=big>And have you tried proposing to python-ideas?</h1>
     Lol<br>
     I tried.
-    <ul>
-        <li>Not a great communicator</li>
-        <li>Too dyslexic to write a PEP</li>
-        <li>I don't really like to evangelize</li>
-        <li>No published paper and no fame make it hard to have a credibility I guess</li>
-    </ul>
+<br/>
+      Not a great communicator
     </div>
 <div
     class="step content " 
