--- a/pres.html
+++ b/pres.html
@@ -54,6 +54,7 @@
         All great story begins with a book! And too much free time<br/>
         <h1 class=big >Part1: The magic of algebra</h1>
           It's all about behaviours<br/>
+<small>(and so is duck typing)</small><br/>
           Legal discolusure: My linear algebra books is the french version of<br/>
           <a href=http://www.goodreads.com/book/show/205506.Schaum_s_Outline_of_Linear_Algebra>
             Lipschutz Linear Algebra (Shaum edition)</a>
