--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <div id="CVinter" class="content step " 
     data-scale=1 data-x="500" data-y="00" data-rotate=45  >
        <h1 class=big >Objectif</h1>
-	Travailler dans un environnement professionel équilibré.
+	Travailler dans un environnement équilibré.
    </div>
    <div class="content step " data-scale=10 data-x="1000" data-y="1000" >
        <h1 class=big >Expériences</h1>
